methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:2: error: not found: value avancer
  avancer ; avancer ;
  ^PictureMono1:2: error: not found: value avancer
  avancer ; avancer ;
            ^