methods.picture.PictureMono1.scala.code
def faireV(){
  avancer ; avancer ;
  baisseBrosse();
}

override def run() {
  faireV()
}